fixed signs overflow error

--- a/styles/signsas.css
+++ b/styles/signsas.css
@@ -1,106 +1,99 @@
 @import url("./main.css");
-*{ margin: 0;
-    padding: 0;
-    scroll-behavior: smooth;
+* {
+  margin: 0;
+  padding: 0;
+  scroll-behavior: smooth;
 }
 
 /* For air signs and fire signs */
 
-.a_f{
-    /* background-color: rgb(124, 43, 191);  */
-    width: 100%;
-    height:auto ;
+.a_f {
+  /* background-color: rgb(124, 43, 191);  */
+  width: 100%;
+  height: auto;
 
-    display: flex;
-    justify-content: space-evenly;
+  display: flex;
+  justify-content: space-evenly;
 }
 
-.a_f .signs{
-       
-    width: 30%;
-    height: 550px;  
-}
- 
- .a_f .signs div:not(.pair-rating){
-    display: flex;
-    justify-content: space-around;
-
-    margin-left: 25px;
-    margin-right: 25px;
-} 
-
-
-.a_f .signs img{
-    width: 25%;
-     height: 100px; 
-
+.a_f .signs {
+  width: 30%;
+  height: fit-content;
 }
 
-.a_f .signs svg{
-     width: 10%;
-    height: 100px;
-}
-.a_f .signs:hover{
-    transform: translateY(-6px) scale(1.02);
-      box-shadow: var(--medium-purple);
-      
-}
-.a_f .signs h5{
-    margin-left: 30px;
-    margin-right: 30px;
-    text-align: center;
+.a_f .signs div:not(.pair-rating) {
+  display: flex;
+  justify-content: space-around;
+
+  margin-left: 25px;
+  margin-right: 25px;
 }
 
-.a_f .signs .pair-rating{
+.a_f .signs img {
+  width: 25%;
+  height: 100px;
+}
 
-    text-align: center;
+.a_f .signs svg {
+  width: 10%;
+  height: 100px;
+}
+.a_f .signs:hover {
+  transform: translateY(-6px) scale(1.02);
+  box-shadow: var(--medium-purple);
+}
+.a_f .signs h5 {
+  margin-left: 30px;
+  margin-right: 30px;
+  text-align: center;
+}
+
+.a_f .signs .pair-rating {
+  text-align: center;
 }
 
 /* For Water signs and Earth signs */
 
 .e_w {
-    width: 100%;
-    height: 550px;
+  width: 100%;
+  height: fit-content;
 
-    display: flex;
-    justify-content: space-evenly;
+  display: flex;
+  justify-content: space-evenly;
 }
 
-.e_w .sign{
-    width: 30%;
-    height: 550px;
-      
-    
+.e_w .sign {
+  width: 30%;
+  height: fit-content;
 }
 
-.e_w .sign div:not(.pair-rating){
-   display: flex;
-   justify-content: space-evenly;
+.e_w .sign div:not(.pair-rating) {
+  display: flex;
+  justify-content: space-evenly;
 
-   margin-left: 25px;
-    margin-right: 25px;
-}
-
-.e_w .sign img{
-   width: 25%;
-    height: 100px; 
+  margin-left: 25px;
+  margin-right: 25px;
 }
 
-.e_w .sign svg{
-     width: 10%;
-    height: 100px;
-}
-.e_w .sign h5{
-    text-align: center;
-     margin-left: 30px;
-    margin-right: 30px;
-  
-    
-}
-.e_w .sign .pair-rating{
-    text-align: center;
+.e_w .sign img {
+  width: 25%;
+  height: 100px;
 }
 
-.e_w .sign:hover{
-    transform: translateY(-6px) scale(1.02);
-      box-shadow: var(--medium-purple);}
+.e_w .sign svg {
+  width: 10%;
+  height: 100px;
+}
+.e_w .sign h5 {
+  text-align: center;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+.e_w .sign .pair-rating {
+  text-align: center;
+}
+
+.e_w .sign:hover {
+  transform: translateY(-6px) scale(1.02);
+  box-shadow: var(--medium-purple);
+}
